--- a/MovieProject/Views/MovieTableViewCell.xib
+++ b/MovieProject/Views/MovieTableViewCell.xib
@@ -41,7 +41,7 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="top" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="AdY-hA-EeJ">
-                                <rect key="frame" x="135" y="76.333333333333343" width="378" height="92.333333333333343"/>
+                                <rect key="frame" x="135" y="61.333333333333336" width="378" height="122.33333333333331"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="TheMovieName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gfd-dP-MKv" userLabel="Title">
                                         <rect key="frame" x="0.0" y="0.0" width="138.33333333333334" height="24"/>
@@ -50,32 +50,40 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kRN-AZ-pzJ" userLabel="OverView">
-                                        <rect key="frame" x="0.0" y="39" width="37.333333333333336" height="18"/>
+                                        <rect key="frame" x="0.0" y="38.999999999999993" width="37.333333333333336" height="18"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <color key="textColor" systemColor="systemGrayColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="HCE-5t-Sty">
-                                        <rect key="frame" x="0.0" y="72.000000000000014" width="142.66666666666666" height="20.333333333333329"/>
+                                        <rect key="frame" x="0.0" y="72" width="214.33333333333334" height="50.333333333333343"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calendar" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="M9O-CA-Gkl">
-                                                <rect key="frame" x="0.0" y="1.6666666666666643" width="20.666666666666668" height="17.333333333333336"/>
+                                                <rect key="frame" x="0.0" y="16.666666666666664" width="20.666666666666668" height="17.333333333333336"/>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="176 dk" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s0I-Ra-USs">
-                                                <rect key="frame" x="25.666666666666657" y="1.3333333333333144" width="45" height="18"/>
+                                                <rect key="frame" x="25.666666666666657" y="16.333333333333314" width="45" height="18"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                 <color key="textColor" systemColor="systemGrayColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="G2D-Gz-VQI">
-                                                <rect key="frame" x="75.666666666666657" y="-0.33333333333333215" width="22" height="19.999999999999996"/>
+                                                <rect key="frame" x="75.666666666666657" y="14.666666666666666" width="22" height="19.999999999999996"/>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="7.5/10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zmi-Fg-gaG">
-                                                <rect key="frame" x="102.66666666666666" y="1.3333333333333144" width="40" height="18"/>
+                                                <rect key="frame" x="102.66666666666666" y="16.333333333333314" width="40" height="18"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                 <color key="textColor" systemColor="systemGrayColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OVr-M7-mXH">
+                                                <rect key="frame" x="147.66666666666669" y="0.0" width="66.666666666666686" height="50.333333333333336"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" image="heart" catalog="system" title="" buttonSize="large"/>
+                                                <connections>
+                                                    <action selector="addFavouriteButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="1gY-yT-Kia"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                     </stackView>
                                 </subviews>
@@ -92,6 +100,7 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="addFavouriteButton" destination="OVr-M7-mXH" id="sGB-Fv-deU"/>
                 <outlet property="movieImageView" destination="RSI-FB-uo0" id="ZgO-fc-NUR"/>
                 <outlet property="movieOverviewLabel" destination="kRN-AZ-pzJ" id="QMU-oG-QFb"/>
                 <outlet property="movieRelaseDateLabel" destination="s0I-Ra-USs" id="DXC-Vr-bUh"/>
@@ -103,6 +112,7 @@
     </objects>
     <resources>
         <image name="calendar" catalog="system" width="128" height="107"/>
+        <image name="heart" catalog="system" width="128" height="107"/>
         <image name="star" catalog="system" width="128" height="116"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
