--- a/MovieProject/Views/MovieTableViewCell.xib
+++ b/MovieProject/Views/MovieTableViewCell.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -18,10 +19,10 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="ukP-M2-1Sa" customClass="Image">
-                        <rect key="frame" x="10" y="0.0" width="513" height="245"/>
+                        <rect key="frame" x="10" y="10" width="513" height="235"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jkc-YF-YNd">
-                                <rect key="frame" x="0.0" y="32.666666666666657" width="120" height="180"/>
+                                <rect key="frame" x="0.0" y="27.666666666666657" width="120" height="180"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="RSI-FB-uo0">
                                         <rect key="frame" x="0.0" y="-10" width="129" height="199"/>
@@ -41,7 +42,7 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="top" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="AdY-hA-EeJ">
-                                <rect key="frame" x="150" y="61.333333333333336" width="363" height="122.33333333333331"/>
+                                <rect key="frame" x="150" y="56.333333333333336" width="363" height="122.33333333333331"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="TheMovieName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gfd-dP-MKv" userLabel="Title">
                                         <rect key="frame" x="0.0" y="0.0" width="138.33333333333334" height="24"/>
@@ -50,13 +51,13 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kRN-AZ-pzJ" userLabel="OverView">
-                                        <rect key="frame" x="0.0" y="38.999999999999993" width="37.333333333333336" height="18"/>
+                                        <rect key="frame" x="0.0" y="39" width="37.333333333333336" height="18"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <color key="textColor" systemColor="systemGrayColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="HCE-5t-Sty">
-                                        <rect key="frame" x="0.0" y="72" width="214.33333333333334" height="50.333333333333343"/>
+                                        <rect key="frame" x="0.0" y="72.000000000000014" width="214.33333333333334" height="50.333333333333329"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calendar" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="M9O-CA-Gkl">
                                                 <rect key="frame" x="0.0" y="16.666666666666664" width="20.666666666666668" height="17.333333333333336"/>
@@ -95,7 +96,7 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="ukP-M2-1Sa" secondAttribute="trailing" constant="10" id="9hw-6z-qXl"/>
-                    <constraint firstItem="ukP-M2-1Sa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="FEy-rz-DzH"/>
+                    <constraint firstItem="ukP-M2-1Sa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="FEy-rz-DzH"/>
                     <constraint firstItem="ukP-M2-1Sa" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="PHu-Qq-fjD"/>
                     <constraint firstAttribute="bottom" secondItem="ukP-M2-1Sa" secondAttribute="bottom" constant="10" id="iu7-Kp-6l5"/>
                 </constraints>
